# advent_calendar

./: .gitignore  index.html  pyproject.toml  script.js  style.css  utils.py
data/: links.json  mapping.json  texts.json
